--- a/templates/lotes.html
+++ b/templates/lotes.html
@@ -1,4 +1,10 @@
-<style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lista de PCIs</title>
+  <style>
     table {
       border-collapse: collapse; /* Faz as bordas se fundirem */
       width: 100%; /* Ajusta a largura da tabela */
@@ -10,50 +16,36 @@
       padding: 8px; /* Adiciona espaçamento interno às células */
     }
   </style>
-  
-<table class="table table-striped-columns" style="border-spacing: 15px;">
+</head>
+<body>
+  <h1>Lista de PCIs</h1>
+  <table>
     <thead>
       <tr>
-        <th scope="col">lote_id</th>
-        <th scope="col">serial number</th>
-        <th scope="col">data de montagem </th>
-        <th scope="col">resultado do teste</th>
-        <th scope="col">téc. do teste</th>
-        <th scope="col">retrabalho</th>
+        <th scope="col">Lote ID</th>
+        <th scope="col">Serial Number</th>
+        <th scope="col">Data de Montagem</th>
+        <th scope="col">Resultado do Teste</th>
+        <th scope="col">Técnico do Teste</th>
+        <th scope="col">Retrabalho</th>
+        <th scope="col">Técnico do Retrabalho</th>
+        <th scope="col">Observações</th>
       </tr>
     </thead>
     <tbody>
+      {% for item in PCI_list %}
       <tr>
-        <th scope="row">1</th>
-        <td>L01-NCB-Rev4-001-0725</td>
-        <td>2025-07-28</td>
-        <td>Aprovado</td>
-        <td>Gustavo Barreto</td>
-        <td>Não</td>
+        <td>{{ item['lote id'] }}</td>
+        <td>{{ item['Serial_Number'] }}</td>
+        <td>{{ item['Montada em:'] }}</td>
+        <td>{{ item['test. result.:'] }}</td>
+        <td>{{ item['tec. teste'] }}</td>
+        <td>{{ item['retrabalho'] }}</td>
+        <td>{{ item['tèc. retrabalho'] }}</td>
+        <td>{{ item['observações'] }}</td>
       </tr>
-      <tr>
-        <th scope="row">1</th>
-        <td>L01-NCB-Rev4-002-0725</td>
-        <td>2025-07-28</td>
-        <td>Aprovado</td>
-        <td>Gustavo Barreto</td>
-        <td>Não</td>
-      </tr>
-      <tr>
-        <th scope="row">1</th>
-        <td>L01-NCB-Rev4-003-0725</td>
-        <td>2025-07-28</td>
-        <td>Aprovado</td>
-        <td>Gustavo Barreto</td>
-        <td>Não</td>
-      </tr>
-      <tr>
-        <th scope="row">1</th>
-        <td>L01-NCB-Rev4-004-0725</td>
-        <td>2025-07-28</td>
-        <td>Reprovado</td>
-        <td>Gustavo Barreto</td>
-        <td>CI soldado na orientação errada</td>
-      </tr>
+      {% endfor %}
     </tbody>
-</table>
+  </table>
+</body>
+</html>
