--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <h1> Registro de PCIs </h1>
+
+    <div c-container="{{url_for('cliente.lista_lotes')}}" ></div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="{{url_for( 'static', filename='JS/cru.js') }}"></script>
   </body>
 </html>
+
