--- a/templates/lotes.html
+++ b/templates/lotes.html
@@ -32,6 +32,7 @@
         <th>Retrabalho</th>
         <th>Técnico do Retrabalho</th>
         <th>Observações</th>
+        <th>Ações</th>
       </tr>
     </thead>
     <tbody>
