versão estável antes da inclusão do pop-up no HTML

--- a/templates/lotes.html
+++ b/templates/lotes.html
@@ -29,9 +29,9 @@
         <th>Data de Montagem</th>
         <th>Resultado do Teste</th>
         <th>Técnico do Teste</th>
-        <th>Retrabalho</th>
-        <th>Técnico do Retrabalho</th>
-        <th>Observações</th>
+        <!-- <th>Retrabalho</th> -->
+        <!-- <th>Técnico do Retrabalho</th> -->
+        <!-- <th>Observações</th> -->
         <th>Ações</th>
       </tr>
     </thead>
@@ -44,9 +44,9 @@
           <td>{{ dados.Data_de_Montagem }}</td>
           <td>{{ dados.Resultado_do_Teste }}</td>
           <td>{{ dados.tecnico_do_teste }}</td>
-          <td>{{ dados.Retrabalho }}</td>
-          <td>{{ dados.Tecnico_do_Retrabalho }}</td>
-          <td>{{ dados.Observacoes }}</td>
+          <!-- <td>{{ dados.Retrabalho }}</td> -->
+          <!-- <td>{{ dados.Tecnico_do_Retrabalho }}</td> -->
+          <!-- <td>{{ dados.Observacoes }}</td> -->
       </tr>
       {% endfor %}
     </tbody>
